docs/api/qiskit/0.19/qiskit.aqua.QuantumInstance.mdx
---
title: QuantumInstance (v0.19)
description: API reference for qiskit.aqua.QuantumInstance in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.QuantumInstance
---

# QuantumInstance

<Class id="qiskit.aqua.QuantumInstance" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/quantum_instance.py" signature="QuantumInstance(backend, shots=1024, seed_simulator=None, max_credits=10, basis_gates=None, coupling_map=None, initial_layout=None, pass_manager=None, seed_transpiler=None, optimization_level=None, backend_options=None, noise_model=None, timeout=None, wait=5, skip_qobj_validation=True, measurement_error_mitigation_cls=None, cals_matrix_refresh_period=30, measurement_error_mitigation_shots=None, job_callback=None)" modifiers="class">
  Quantum Backend including execution setting.

  Quantum Instance holds a Qiskit Terra backend as well as configuration for circuit transpilation and execution. When provided to an Aqua algorithm the algorithm will execute the circuits it needs to run using the instance.

  **Parameters**

  *   **backend** ([*BaseBackend*](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")) – Instance of selected backend
  *   **shots** (*int, optional*) – Number of repetitions of each circuit, for sampling
  *   **seed\_simulator** (*int, optional*) – Random seed for simulators
  *   **max\_credits** (*int, optional*) – Maximum credits to use
  *   **basis\_gates** (*list\[str], optional*) – List of basis gate names supported by the target. Default: \[‘u1’, ‘u2’, ‘u3’, ‘cx’, ‘id’]
  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") *or list\[list]*) – Coupling map (perhaps custom) to target in mapping
  *   **initial\_layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout") *or dict or list, optional*) – Initial layout of qubits in mapping
  *   **pass\_manager** ([*PassManager*](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")*, optional*) – Pass manager to handle how to compile the circuits
  *   **seed\_transpiler** (*int, optional*) – The random seed for circuit mapper
  *   **optimization\_level** (*int, optional*) – How much optimization to perform on the circuits. Higher levels generate more optimized circuits, at the expense of longer transpilation time.
  *   **backend\_options** (*dict, optional*) – All running options for backend, please refer to the provider of the backend for information as to what options it supports.
  *   **noise\_model** (*qiskit.provider.aer.noise.noise\_model.NoiseModel, optional*) – noise model for simulator
  *   **timeout** (*float, optional*) – Seconds to wait for job. If None, wait indefinitely.
  *   **wait** (*float, optional*) – Seconds between queries for job result
  *   **skip\_qobj\_validation** (*bool, optional*) – Bypass Qobj validation to decrease circuit processing time during submission to backend.
  *   **measurement\_error\_mitigation\_cls** (*Callable, optional*) – The approach to mitigate measurement errors. Qiskit Ignis provides fitter classes for this functionality and CompleteMeasFitter from qiskit.ignis.mitigation.measurement module can be used here. (TensoredMeasFitter is not supported).
  *   **cals\_matrix\_refresh\_period** (*int, optional*) – How often to refresh the calibration matrix in measurement mitigation. in minutes
  *   **measurement\_error\_mitigation\_shots** (*int, optional*) – The number of shots number for building calibration matrix. If None, the main shots parameter value is used.
  *   **job\_callback** (*Callable, optional*) – Optional user supplied callback which can be used to monitor job progress as jobs are submitted for processing by an Aqua algorithm. The callback is provided the following arguments: job\_id, job\_status, queue\_position, job

  **Raises**

  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – the shots exceeds the maximum number of shots
  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set noise model but the backend does not support that
  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set backend\_options but the backend does not support that

  ## Attributes

  <span id="quantuminstance-backend-options-qasm-only" />

  ### BACKEND\_OPTIONS\_QASM\_ONLY

  <Attribute id="qiskit.aqua.QuantumInstance.BACKEND_OPTIONS_QASM_ONLY" attributeValue="['statevector_sample_measure_opt', 'max_parallel_shots']" />

  <span id="quantuminstance-backend" />

  ### backend

  <Attribute id="qiskit.aqua.QuantumInstance.backend">
    Return BaseBackend backend object.
  </Attribute>

  <span id="quantuminstance-backend-config" />

  ### backend\_config

  <Attribute id="qiskit.aqua.QuantumInstance.backend_config">
    Getter of backend\_config.
  </Attribute>

  <span id="quantuminstance-backend-name" />

  ### backend\_name

  <Attribute id="qiskit.aqua.QuantumInstance.backend_name">
    Return backend name.
  </Attribute>

  <span id="quantuminstance-backend-options" />

  ### backend\_options

  <Attribute id="qiskit.aqua.QuantumInstance.backend_options">
    Getter of backend\_options.
  </Attribute>

  <span id="quantuminstance-cals-matrix-refresh-period" />

  ### cals\_matrix\_refresh\_period

  <Attribute id="qiskit.aqua.QuantumInstance.cals_matrix_refresh_period">
    returns matrix refresh period
  </Attribute>

  <span id="quantuminstance-circuit-summary" />

  ### circuit\_summary

  <Attribute id="qiskit.aqua.QuantumInstance.circuit_summary">
    Getter of circuit summary.
  </Attribute>

  <span id="quantuminstance-compile-config" />

  ### compile\_config

  <Attribute id="qiskit.aqua.QuantumInstance.compile_config">
    Getter of compile\_config.
  </Attribute>

  <span id="quantuminstance-is-local" />

  ### is\_local

  <Attribute id="qiskit.aqua.QuantumInstance.is_local">
    Return True if backend is a local backend.
  </Attribute>

  <span id="quantuminstance-is-simulator" />

  ### is\_simulator

  <Attribute id="qiskit.aqua.QuantumInstance.is_simulator">
    Return True if backend is a simulator.
  </Attribute>

  <span id="quantuminstance-is-statevector" />

  ### is\_statevector

  <Attribute id="qiskit.aqua.QuantumInstance.is_statevector">
    Return True if backend is a statevector-type simulator.
  </Attribute>

  <span id="quantuminstance-measurement-error-mitigation-cls" />

  ### measurement\_error\_mitigation\_cls

  <Attribute id="qiskit.aqua.QuantumInstance.measurement_error_mitigation_cls">
    returns measurement error mitigation cls
  </Attribute>

  <span id="quantuminstance-measurement-error-mitigation-shots" />

  ### measurement\_error\_mitigation\_shots

  <Attribute id="qiskit.aqua.QuantumInstance.measurement_error_mitigation_shots">
    returns measurement error mitigation shots
  </Attribute>

  <span id="quantuminstance-noise-config" />

  ### noise\_config

  <Attribute id="qiskit.aqua.QuantumInstance.noise_config">
    Getter of noise\_config.
  </Attribute>

  <span id="quantuminstance-qjob-config" />

  ### qjob\_config

  <Attribute id="qiskit.aqua.QuantumInstance.qjob_config">
    Getter of qjob\_config.
  </Attribute>

  <span id="quantuminstance-run-config" />

  ### run\_config

  <Attribute id="qiskit.aqua.QuantumInstance.run_config">
    Getter of run\_config.
  </Attribute>

  <span id="quantuminstance-skip-qobj-validation" />

  ### skip\_qobj\_validation

  <Attribute id="qiskit.aqua.QuantumInstance.skip_qobj_validation">
    checks if skip qobj validation
  </Attribute>

  ## Methods

  <span id="quantuminstance-assemble" />

  ### assemble

  <Function id="qiskit.aqua.QuantumInstance.assemble" signature="QuantumInstance.assemble(circuits)">
    assemble circuits
  </Function>

  <span id="quantuminstance-cals-matrix" />

  ### cals\_matrix

  <Function id="qiskit.aqua.QuantumInstance.cals_matrix" signature="QuantumInstance.cals_matrix(qubit_index=None)">
    Get the stored calibration matrices and its timestamp.

    **Parameters**

    *   **qubit\_index** (*list\[int]*) – the qubit index of corresponding calibration matrix.
    *   **None** (*If*) –
    *   **matrices.** (*return all stored calibration*) –

    **Returns**

    **the calibration matrix and the creation timestamp if qubit\_index**

    is not None otherwise, return all matrices and their timestamp in a dictionary.

    **Return type**

    tuple(np.ndarray, int)
  </Function>

  <span id="quantuminstance-execute" />

  ### execute

  <Function id="qiskit.aqua.QuantumInstance.execute" signature="QuantumInstance.execute(circuits, had_transpiled=False)">
    A wrapper to interface with quantum backend.

    **Parameters**

    *   **circuits** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *or list\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*]*) – circuits to execute
    *   **had\_transpiled** (*bool, optional*) – whether or not circuits had been transpiled

    **Returns**

    Result object

    **Return type**

    [Result](qiskit.result.Result "qiskit.result.Result")

    #### TODO: Maybe we can combine the circuits for the main ones and calibration circuits before

    assembling to the qobj.
  </Function>

  <span id="quantuminstance-maybe-refresh-cals-matrix" />

  ### maybe\_refresh\_cals\_matrix

  <Function id="qiskit.aqua.QuantumInstance.maybe_refresh_cals_matrix" signature="QuantumInstance.maybe_refresh_cals_matrix(timestamp=None)">
    Calculate the time difference from the query of last time.

    **Returns**

    whether or not refresh the cals\_matrix

    **Return type**

    bool
  </Function>

  <span id="quantuminstance-set-config" />

  ### set\_config

  <Function id="qiskit.aqua.QuantumInstance.set_config" signature="QuantumInstance.set_config(**kwargs)">
    Set configurations for the quantum instance.
  </Function>

  <span id="quantuminstance-transpile" />

  ### transpile

  <Function id="qiskit.aqua.QuantumInstance.transpile" signature="QuantumInstance.transpile(circuits)">
    A wrapper to transpile circuits to allow algorithm access the transpiled circuits. :param circuits: circuits to transpile :type circuits: QuantumCircuit or list\[QuantumCircuit]

    **Returns**

    **the transpiled circuits, it is always a list even though**

    the length is one.

    **Return type**

    list\[[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")]
  </Function>
</Class>

